Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/Meeting_Atendee__c.object-meta.xml
<CustomObject>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>MA-{000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>