Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Award_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Name__c</fullName>
    <label>Award Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Most active user</fullName>
            </value>
            <value>
                <fullName>Top performer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>