Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Has_Award_been_given__c.field-meta.xml
<CustomField>
    <fullName>Has_Award_been_given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Award been given?</label>
    <type>Checkbox</type>
</CustomField>