Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/is_feedback_submitted__c.field-meta.xml
<CustomField>
    <fullName>is_feedback_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is feedback submitted?</label>
    <type>Checkbox</type>
</CustomField>