Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Meeting_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attended_Date__c</fullName>
    <label>Meeting Attended Date</label>
    <type>Date</type>
</CustomField>