Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Meeting_Attendee_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attendee_Status__c</fullName>
    <label>Meeting Attendee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>