Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>