Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Meetings__c.field-meta.xml
<CustomField>
    <fullName>Meetings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meetings</label>
    <referenceTo>Meetings__c</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>