Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Response_2__c.field-meta.xml
<CustomField>
    <fullName>Response_2__c</fullName>
    <label>Response 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>