Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/fields/Response_3__c.field-meta.xml
<CustomField>
    <fullName>Response_3__c</fullName>
    <label>Response 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>