Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Meetings__c</columns>
    <columns>Meeting_Type__c</columns>
    <columns>Meeting_Attendee_Status__c</columns>
    <columns>Meeting_Attended_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>