Partial_14Dec2021/force-app/main/default/objects/Meeting_Atendee__c/listViews/Awards.listView-meta.xml
<ListView>
    <fullName>Awards</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Meetings__c</columns>
    <columns>Meeting_Attended_Date__c</columns>
    <columns>is_feedback_submitted__c</columns>
    <columns>Meeting_Attendee_Status__c</columns>
    <columns>Has_Award_been_given__c</columns>
    <columns>Award_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Has_Award_been_given__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Awards</label>
</ListView>